--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ENV=development
 
 # Server
-PORT=6000
+PORT=9001
 HOST=localhost
 
 # Swagger
@@ -16,17 +16,17 @@ JWT_EXPIRES_IN=8640000000
 JWT_REFRESH_EXPIRES_IN=8640000000
 
 # Redis
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=123456
 
 # Database
 # mysql
 DB_TYPE=postgres
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=admin
+DB_USERNAME=root
+DB_PASSWORD=123456
 DB_DATABASE_NAME=homeliv
 #mongodb
 DB_URI=mongodb://localhost:27017/test-payment
