--- a/.production.env
+++ b/.production.env
@@ -25,8 +25,8 @@ REDIS_PASSWORD=123456
 DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=admin
+DB_USERNAME=root
+DB_PASSWORD=123456
 DB_DATABASE_NAME=homeliv
 #mongodb
 DB_URI=mongodb://localhost:27017/test-payment
